1.15.9000 (future)
  * BACKWARD INCOMPATIBLE CHANGE: 'transpose' argument to 'coords' switched to FALSE by default (issue #54)
  * Fix one-sided DeLong test for curves with 'direction=">"' (issue #64)
  * Fix an error in 'ci.coords' due to expected 'NA' values in some coords (like "precision") (issue #65)
  
1.15.3 (2019-07-21)
  * Fix: previous version accidentally set transpose = FALSE, should only be for next major release

1.15.2 (2019-07-20)
  * Fix -Inf threshold in coords for curves with 'direction = ">"' (issue #60)
  * Restore lazy loading of the data and fix an 'R CMD check' warning "Variables with usage in documentation object 'aSAH' not in code"

1.15.1 (2019-07-17)
  * Fix erroneous error in 'ci.coords' with 'ret="threshold"' (issue #57)
  * Fix vdiffr unit tests with ggplot2 3.2.0 (issue #53)
  * Keep list order in 'ggroc' (issue #58)

1.15.0 (2019-06-01)
  * 'roc' now prints messages when autodetecting 'levels' and 'direction' by default. Turn off with 'quiet = TRUE' or set these values explicitly
  * Speedup with 'algorithm = 2' (issue #44) and in 'coords' (issue #52)
  * New 'algorithm = 6' (used by default) uses 'algorithm = 2' for numeric data, and 'algorithm = 3' for ordered vectors
  * New 'roc.data.frame' method and 'roc_' function for use in pipelines
  * 'coords' can now returns 'youden' and 'closest.topleft" values (issue #48)
  * New 'transpose' argument for 'coords', TRUE by default (issue #54)
  * Use text instead of Tcl/Tk progress bar by default (issue #51)
  * Fix 'method = "density"' smoothing when called directly from 'roc' (issue #49)
  * Renamed 'roc' argument 'n' to 'smooth.n'
  * Fixed 'are.paired' ignoring smoothing arguments of 'roc2' with 'return.paired.rocs'
  * New 'ret' option "all" in 'coords' (issue #47)
  * 'drop' in 'coords' now drops the dimension of 'ret' too (#issue 43)

1.14.0 (2019-03-12)
  * The 'multiclass.roc' function now accepts multivariate decision values (code contributed by Matthias Döring)