@@ -2,6 +2,7 @@
   * BACKWARD INCOMPATIBLE CHANGE: 'transpose' argument to 'coords' switched to FALSE by default (issue #54)
   * Fix one-sided DeLong test for curves with 'direction=">"' (issue #64)
   * Fix an error in 'ci.coords' due to expected 'NA' values in some coords (like "precision") (issue #65)
+  * Ordrered predictors are converted to numeric in a more robust way (#63)
   
 1.15.3 (2019-07-21)
   * Fix: previous version accidentally set transpose = FALSE, should only be for next major release
